[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "getdx"
version = "0.1.0"
description = "Python SDK for the DX Web and DX Data Cloud APIs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Priit Pihus" }]
license = "MIT"
keywords = [
  "dx",
  "developer experience",
  "api",
  "sdk",
  "client",
  "data",
  "engineering metrics",
  "devex",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "typing-extensions>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/priiiiit/dx-python"
Repository = "https://github.com/priiiiit/dx-python"
Issues = "https://github.com/priiiiit/dx-python/issues"
Documentation = "https://docs.getdx.com"

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/getdx/web/operations.py" = ["E501"]
"src/getdx/data_cloud/operations.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=getdx --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["getdx"]
branch = true

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.hatch.build.targets.wheel]
packages = ["src/getdx"]
include = ["src/getdx/py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
packages = ["getdx"]
